src/gui/components/emulator/EmulatorRunner.module.css
.container {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
}

.bar {
	width: 100%;
	min-height: 41.5px; /* (tied to HorizontalDragList.js and Tab.module.css) */
	border-width: 0 0 1px;
	border-style: solid;
	border-color: darkgray;
	box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.075),
		0 0 8px rgba(200, 200, 200, 0.6);
	font-family: "Courier New", Courier, monospace;
	user-select: none;

	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	padding-left: 16px;
	padding-right: 16px;
	font-size: small;
}

.row {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.column {
	display: flex;
	flex-direction: column;
}

.units {
	text-overflow: ellipsis;
	white-space: nowrap;
}

.unitGroup {
	display: flex;
	flex-direction: row;
}

.standaloneUnit {
	height: fit-content;
	align-self: center;
	margin-left: 8px;
	margin-right: 8px;
}

.dragMessage {
	font-size: x-small;
	line-height: normal;
	text-overflow: ellipsis;
	white-space: nowrap;
	margin-left: 8px;
	margin-right: 8px;
	cursor: pointer;

	border-radius: 8px;
	border: 1px dashed rgb(143, 143, 143);
	padding: 4px;
}

.info {
	position: absolute;
	bottom: 0;
	left: 0;
	user-select: none;
	margin: 0;
	font-size: xx-small;
	opacity: 0.75;
	padding: 8px;
	border-top-right-radius: 8px;
	cursor: crosshair;
}

.info:hover {
	opacity: 1;
	background-color: black;
	transition: opacity 0.3s, background-color 0.3s;
}

.controlButtons {
	position: absolute;
	bottom: 0;
	right: 0;
	user-select: none;
	margin: 0;
	opacity: 0.75;
	padding: 8px;
	border-top-left-radius: 8px;
	cursor: crosshair;
}

.controlButtons:hover {
	opacity: 1;
	background-color: black;
	transition: opacity 0.3s, background-color 0.3s;
}

.label {
	margin-right: 4px;
}

